--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
     <!-- Movie row -->
     <div class="container">
       <section class="content-section">
-        <h2 class="section-title">OPopular</h2>
+        <h2 class="section-title">Popular</h2>
 
         <div class="content-row">
           <!-- Cards -->
