--- a/profile-details.html
+++ b/profile-details.html
@@ -66,7 +66,7 @@
                 <button class="btn-change">Change Plan</button>
               </div>
               <p class="setting-details">Premium Plan-199/month</p>
-              <p class="setting-details">Next billin date-July 05, 2025</p>
+              <p class="setting-details">Next billing date-July 05, 2025</p>
             </div>
 
             <!-- Cards -->
